First pass at Windows packaging for 5.0
- Moved Windows build from Ant to Gradle
- Moved resources into src/main/resources (and src/test/resources), and
simplified resulting logging config
- Better check for isDevel()

Change-Id: I369797bfa29e3eb00dad09f3a98b4ff1e73780ed